[project]
name = "lastmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "pypdf>=6.4.0",
    "ruff>=0.14.6",
    "wikipedia>=1.4.0",
]
